# pyforma

./: README.md  pyproject.toml
.github/workflows/: publish.yml  uv.yml
doc/: api.md  examples.md  template_syntax.md
src/pyforma/: __init__.py  _template.py  _template_context.py
src/pyforma/_ast/: __init__.py  environment.py  expression.py  origin.py
src/pyforma/_parser/: __init__.py  alternation.py  comment.py  digits.py  environment.py  expression.py  expression_block.py  floating_point_literal_expression.py  identifier.py  identifier_expression.py  integer_literal_expression.py  literal.py  munch.py  non_empty.py  not_in.py  option.py  parse_context.py  parse_error.py  parse_input.py  parse_result.py  parser.py  repetition.py  sequence.py  string_literal_expression.py  template.py  template_syntax_config.py  text.py  whitespace.py
tests/: test_examples.py  test_something.py  test_template.py  test_template_context.py
tests/parser/: test_alternation.py  test_comment.py  test_delimited.py  test_expression.py  test_expression_block.py  test_identifier.py  test_indirect.py  test_literal.py  test_lookahead.py  test_munch.py  test_negative_lookahead.py  test_non_empty.py  test_not_in.py  test_nothing.py  test_option.py  test_parse_context.py  test_parse_input.py  test_parse_result.py  test_parser.py  test_repetition.py  test_sequence.py  test_switch_parser.py  test_template.py  test_template_parser.py  test_template_syntax_config.py  test_text.py  test_transform_result.py  test_until.py  test_whitespace.py
tests/util/: test_find_mismatch.py  test_pipeable.py
(+32 files in other folders)
