[project]
name = "pyforma"
version = "0.1.0"
description = "A python template engine"
readme = "README.md"
authors = [
    { name = "Jan Möller", email = "drag-on@gmx.de" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
